# cupel

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Cupel.slnx  Directory.Build.props  Directory.Packages.props  README.md  justfile  package.json
.cargo/: config.toml
.claude/hooks/: kata-statusline.js
.forgejo/workflows/: ci-rust.yml
.githooks/: pre-commit
.husky/: pre-commit  pre-push
.kata/: DECISIONS.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
conformance/: README.md
crates/cupel/: Cargo.toml  LICENSE  README.md  deny.toml
crates/cupel-otel/: Cargo.toml  README.md
crates/cupel-otel/src/: lib.rs
crates/cupel-otel/tests/: integration.rs
crates/cupel-testing/: Cargo.toml  README.md  deny.toml
crates/cupel-testing/src/: chain.rs  lib.rs
crates/cupel-testing/tests/: assertions.rs  smoke.rs
crates/cupel/conformance/required/pipeline/: diag-pinned-override.toml  diag-scored-inclusion.toml  greedy-chronological.toml  knapsack-chronological.toml  pinned-items.toml
crates/cupel/conformance/required/placing/: chronological-null-timestamps.toml
crates/cupel/conformance/required/scoring/: composite-weighted.toml  decay-exponential-half-life.toml  decay-window-at-boundary.toml  metadata-key-absent-neutral.toml  metadata-trust-key-absent.toml  metadata-trust-present-valid.toml  metadata-trust-unparseable.toml  recency-basic.toml  reflexive-null.toml  scaled-basic.toml
crates/cupel/conformance/required/slicing/: count-constrained-knapsack-require-and-cap.toml  count-constrained-knapsack-tag-nonexclusive.toml  greedy-exact-fit.toml  greedy-zero-tokens.toml  knapsack-basic.toml
crates/cupel/examples/: basic_pipeline.rs  quota_slicing.rs  serde_roundtrip.rs
crates/cupel/src/: analytics.rs  error.rs  lib.rs
crates/cupel/src/diagnostics/: mod.rs  trace_collector.rs
crates/cupel/src/model/: context_budget.rs  context_item.rs  context_kind.rs  context_source.rs  mod.rs  overflow_strategy.rs  scored_item.rs
crates/cupel/src/pipeline/: classify.rs  deduplicate.rs  mod.rs  place.rs  score.rs  slice.rs  sort.rs
crates/cupel/src/placer/: chronological.rs  mod.rs  u_shaped.rs
crates/cupel/src/scorer/: composite.rs  decay.rs  frequency.rs  kind.rs  metadata_key.rs  metadata_trust.rs  mod.rs  priority.rs  recency.rs  reflexive.rs  scaled.rs  tag.rs
crates/cupel/src/slicer/: count_constrained_knapsack.rs  count_quota.rs  greedy.rs  knapsack.rs  mod.rs  quota.rs
crates/cupel/tests/: budget_simulation.rs  conformance.rs  count_constrained_knapsack.rs  count_quota_composition.rs  dry_run_with_policy.rs  equality.rs  on_pipeline_completed.rs  policy_sensitivity.rs  policy_sensitivity_from_policies.rs  quota_utilization.rs  serde.rs
crates/cupel/tests/conformance/: pipeline.rs  placing.rs  scoring.rs  slicing.rs
nupkg/: Wollax.Cupel.Diagnostics.OpenTelemetry.0.0.0-alpha.0.78.nupkg  Wollax.Cupel.Diagnostics.OpenTelemetry.0.0.0-alpha.0.78.snupkg  Wollax.Cupel.Diagnostics.OpenTelemetry.0.0.0-alpha.0.84.snupkg  Wollax.Cupel.Diagnostics.OpenTelemetry.0.0.0-alpha.0.86.snupkg  Wollax.Cupel.Testing.0.0.0-alpha.0.78.snupkg  Wollax.Cupel.Testing.0.0.0-alpha.0.80.nupkg  Wollax.Cupel.Testing.0.0.0-alpha.0.80.snupkg
spec/: book.toml
spec/book/: 404.html  (+13 more)
(+1129 files in other folders)
