[package]
name = "cupel"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/wollax/cupel"
description = "Context window management pipeline for LLM applications"
readme = "README.md"
categories = ["algorithms", "text-processing"]
keywords = ["llm", "context-window", "pipeline", "token-budget"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "examples/**/*.rs",
    "conformance/**/*.toml",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "serde_roundtrip"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
